# LyraDB

./: .clangd  .gitignore  00_PROJECT_COMPLETION_SUMMARY.md  CMakeLists_conan.txt  CMakeLists_formats.txt  CONAN_INSTALLATION_GUIDE.md  DATABASE_COMPREHENSIVE_TEST_REPORT.md  DISTRIBUTION_GUIDE.md  DISTRIBUTION_MANIFEST.md  INSTALLATION.md  LICENSE  LYRADB_COMPREHENSIVE_SUMMARY.md  PROJECT_STATUS_REPORT.md  QUICK_START.md  README.md  build_all.sh  build_linux.sh  build_macos.sh  build_windows.bat  build_windows.sh  conandata.yml  conanfile.py  conanfile_simple.py  example_customers_iter.lyradbite  example_store.lyradb  lyradb_project.db  store_db_export.lyradb  store_db_products_iter.lyradbite  usage_demo.cpp
benchmarks/: bench_compression.cpp  bench_phase43_indexed.cpp  bench_queries.cpp  bench_vectorized.cpp  phase44_benchmark.cpp
docs/: 02_SQL_REFERENCE.md  03_C_API_REFERENCE.md  04_CPP_API_REFERENCE.md  05_DATA_TYPES_REFERENCE.md  06_TROUBLESHOOTING.md  07_INSTALLATION.md  08_INTEGRATION_GUIDE.md  INDEX.md
examples/: CMakeLists.txt  advanced_range_query_patterns.sql  btree_range_query_example.c  database_file_example.cpp  db_file_simple.cpp  dml_test.c  music_test.c  simple.c  test_composite_index.c  test_db_file_format.cpp  test_formats.cpp  test_hash_index.c  test_phase_3_3.cpp
examples/conan_usage_example/: CMakeLists.txt  conanfile.txt  main.cpp
include/: lyradb.h  lyradb_c.h
tests/: btree_benchmark.cpp  distribution_demo.cpp  index_optimizer_test.cpp  index_test.cpp  phase6_integration_test.cpp  phase7_advanced_optimizer_test.cpp  test_aggregator.cpp  (+36 more)
(+69 files in other folders)
